@@ -1,4 +1,4 @@
-// Copyright (c) 2014-2014 Josh Blum
+// Copyright (c) 2014-2015 Josh Blum
 // SPDX-License-Identifier: BSL-1.0
 
 #include "PothosGuiUtils.hpp" //make icon path and object/action maps
@@ -120,7 +120,11 @@ void GraphEditorTabs::handleSave(void)
 {
     auto editor = dynamic_cast<GraphEditor *>(this->currentWidget());
     assert(editor != nullptr);
+    this->handleSave(editor);
+}
 
+void GraphEditorTabs::handleSave(GraphEditor *editor)
+{
     //no file path? redirect to save as
     if (editor->getCurrentFilePath().isEmpty()) this->handleSaveAs();
 
@@ -169,6 +173,7 @@ void GraphEditorTabs::handleSaveAll(void)
     {
         auto editor = dynamic_cast<GraphEditor *>(this->widget(i));
         assert(editor != nullptr);
+        this->handleSave(editor);
     }
     this->saveState();
 }
